# OpenCV3

./: .gitignore  CMakeLists.txt  InstallAndConfigure.md  README.md  cmake.bat
Practice/2022/04/: CMakeLists.txt  hello.cpp
Practice/2022/04/21/: hello.cpp
Practice/2022/04/27/: SimpleTransform.cpp
Practice/2022/04/30/: cvMatSample.cpp
Practice/2022/05/: CMakeLists.txt
Practice/2022/05/01/: mat_constructor.cpp
